<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faded_bg"
    tools:context=".fragment.AboutFragment">

    <!-- close btn -->
    <ImageButton
        android:id="@+id/fragment_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="15dp"
        android:elevation="1dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_close"
        android:background="@drawable/blue_rounded_bg"
        />

    <ScrollView
        android:id="@+id/fragmentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="80dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/white_rounded_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@drawable/blue_rounded_bg"
                android:layout_marginBottom="10dp"/>

            <!-- About the app -->
            <TextView
                android:id="@+id/title_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_title_1"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/teal_700"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/app_about_text"
                android:gravity="center"
                android:textSize="14sp"/>


            <!-- Development details -->
            <TextView
                android:id="@+id/title_reserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_3"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/teal_700"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_development"
                android:textSize="14sp"
                android:gravity="center"/>

            <!-- Developer name -->
            <TextView
                android:id="@+id/title_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_2"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/teal_700"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_developer"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>